tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.out
Object: 2 error: did not understand #%
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #% (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:8)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:28)
Object: nil error: did not understand #>
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #> (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:7)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:29)
Object: nil error: did not understand #>
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #> (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:19)
UndefinedObject>>executeStatements ("Global garbage collection... done"
../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:31)
Object: nil error: did not understand #asString
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #asString (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:32)
5^(4^(3^2)) has 0 digits: Object: nil error: did not understand #copyFrom:to:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #copyFrom:to: (SysExcept.st:1448)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/arbitrary-precision-integers-included-.st:33)
